# dolphin-Vanguard

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Readme.md
.github/workflows/: build.yml
Languages/: Languages.vcxproj
Source/: CMakeLists.txt  dolphin-emu-ci.sln  dolphin-emu.sln  dolphin-emu.sln.orig
Source/Android/app/src/main/java/org/dolphinemu/dolphinemu/services/: GameFileCacheService.java
Source/Android/jni/AndroidCommon/: AndroidCommon.cpp
Source/Android/jni/GameList/: GameFile.cpp  GameFileCache.cpp
Source/Core/: DolphinLib.vcxproj
Source/Core/AudioCommon/: AudioCommon.vcxproj
Source/Core/Common/: CMakeLists.txt  ChunkFile.h  Common.vcxproj  MinizipUtil.h  Random.cpp  SCMRevGen.vcxproj  StringUtil.cpp  make_scmrev.h.js
Source/Core/Common/Config/: Config.cpp  Config.h  Enums.h
Source/Core/Core/: BootManager.cpp  CMakeLists.txt  ConfigManager.cpp  Core.cpp  Core.vcxproj  Core.vcxproj.filters  CoreTiming.cpp  HotkeyManager.cpp  PatchEngine.cpp  State.cpp
Source/Core/Core/Config/: MainSettings.cpp
Source/Core/Core/HW/: SystemTimers.cpp
Source/Core/Core/HW/SI/: SI.cpp
Source/Core/Core/HW/WiimoteEmu/Extension/: Drums.cpp  Drums.h
Source/Core/Core/HW/WiimoteReal/: WiimoteReal.cpp
Source/Core/Core/IOS/FS/HostBackend/: FS.cpp  File.cpp
Source/Core/DiscIO/: DiscIO.vcxproj
Source/Core/DolphinNoGUI/: DolphinNoGUI.vcxproj
Source/Core/DolphinQt/: CMakeLists.txt  DolphinQt.vcxproj  Main.cpp  MainWindow.cpp  MainWindow.h  MenuBar.cpp  log.txt
Source/Core/DolphinQt/Config/Graphics/: HacksWidget.cpp
Source/Core/DolphinQt/NarrysMod/: CMakeLists.txt  DolphinMemoryDomain.cpp  DolphinMemoryDomain.h  Helpers.hpp  NetcoreClient.h  ThreadLocalHelper.h  VanguardClient.cpp  VanguardClient.h  VanguardClientInitializer.h  VanguardConfigLoader.cpp  VanguardConfigLoader.h  VanguardSettings.cpp  VanguardSettingsWrapper.h
Source/Core/DolphinQt/Settings/: AudioPane.cpp  AudioPane.cpp.orig  AudioPane_LOCAL_440.cpp
Source/Core/DolphinQt/VanguardUnmanagedWrapper.cpp/: VanguardUnmanagedWrapper.cpp  VanguardUnmanagedWrapper.h
Source/Core/InputCommon/: InputCommon.vcxproj  InputCommon.vcxproj.filters
Source/Core/UICommon/: AutoUpdate.cpp  UICommon.cpp  UICommon.vcxproj
Source/Core/UpdaterCommon/: UpdaterCommon.vcxproj
Source/Core/VideoBackends/D3D/: D3D.vcxproj
Source/Core/VideoBackends/D3D12/: D3D12.vcxproj
Source/Core/VideoBackends/D3DCommon/: D3DCommon.vcxproj
Source/Core/VideoBackends/Null/: Null.vcxproj
Source/Core/VideoBackends/OGL/: OGL.vcxproj  ProgramShaderCache.cpp
Source/Core/VideoBackends/Software/: Software.vcxproj
Source/Core/VideoBackends/Vulkan/: Vulkan.vcxproj
Source/Core/VideoCommon/: AbstractStagingTexture.cpp  OnScreenDisplay.cpp  OpcodeDecoding.cpp  VertexShaderGen.cpp  VideoCommon.vcxproj  VideoCommon.vcxproj.filters  VideoConfig.cpp  XFStructs.cpp
Source/Core/WinUpdater/: WinUpdater.vcxproj
Source/DSPSpy/: DSPSpy.vcxproj
Source/DSPTool/: DSPTool.vcxproj
Source/MigrationBackup/b2dfb265/CorruptCore/: CorruptCore.csproj  NuGetUpgradeLog.html  packages.config
Source/PCH/: pch.vcxproj
Source/UnitTests/: CMakeLists.txt  UnitTests.vcxproj
Source/VSProps/: Base.props  Microsoft.VCToolsVersion.14.22.props  QtCompile.props
Source/VanguardCLR/: VanguardCLR.vcxproj  VanguardCLR.vcxproj.filters
Source/VanguardUnmanaged/: VanguardUnmanaged.vcxproj  VanguardUnmanaged.vcxproj.filters
docs/DSP/DSP_InterC/DSP_InterC/: DSP_InterC.vcxproj
